<resources>
    <string name="app_name">Grievance Redressal</string>
    <string name="title_home">Home</string>
    <string name="title_regcomp">Register Complaint</string>
    <string name="group_name">The Vision</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
...
