<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vision.grievanceredressal.checkStatus"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/statustitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Check Status"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/statustext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Unique Key"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/uniqueKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Enter unique key"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/statusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal|center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="Get Status"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>